<resources>
    <string name="app_name">CourtCounter</string>
    <string name="team_a">Team A</string>
    <string name="score">0</string>
    <string name="_3_points">+3 points</string>
    <string name="_2_points">+2 points</string>
    <string name="team_b">Team B</string>
    <string name="_0">0</string>
    <string name="reset">Reset</string>
    <string name="free_throw">Free Throw</string>
</resources>
